--- a/index.html
+++ b/index.html
@@ -68,25 +68,6 @@
 					</div>
 				  </nav>
 			</header>
-			<!--<div class="section-banner-home">
-				<div class="row">
-					<div class="col-12">
-						<img src="banner.png" class="img-fluid banner-home" alt="banner-home">
-						<section class="texto-menu">
-							<h1>Venha conhecer nosso diferencial</h1>
-							<p>Lorem ipsum sfds sdfos aofojdosp sojfos sdfsdoj josjfps osfsdpo ojiofsdlk osdfsmolfsl osdfnsdofn osf sfd wfdsd sfsasd sdfsf sfasafsdc fsdfs </p>
-							<a class="btn-banner" href="#" target="_blank">Saiba mais</a>
-						</section>	
-					</div>
-				</div>				
-			</div>		
-			<div class="container-fluid p-0 m-0">
-				<div class="row m-0">
-					<div class="col-12 p-0">
-						<img src="banner-png" class="img-fluid banner-home" alt="banner-home">
-					</div>
-				</div>
-			</div>	-->
 			<div class="banner-home d-flex align-items-center">
 				<div class="container-fluid">
 					<div class="row">
@@ -169,4 +150,5 @@
 			<div id="carouselExampleControls" class="carousel slide d-block d-lg-none" data-bs-ride="carousel"></div>
 
 		</body>
+		<script type="text/javascript" src="js/scripts.js"></script>
 	</html> 
