--- a/js/Teste.html
+++ b/js/Teste.html
@@ -1,12 +1,10 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>Introdução jQuery </title>
+<title>Introdução jQuery </title>
 	<!-- <script type="text/javascript"  src="jquery-3.6.3.min.js"></script> -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-	<script type="text/javascript"  src="jquery2.js"></script>	
-	
+	<script  src="jquery2.js"></script>	
 
 </head>
 <body>
