--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		</head>
 	
 		<body>
+			<button onclick="myFunction()">Clique Aqui</button>
+				<div id="contextText"><p>TExto que vai sumir</p></div>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
             crossorigin="anonymous"></script>
@@ -77,7 +79,7 @@
 						<div class="col-12 col-md-6">
 							<section class="texto-menu">
 								<h1>Venha conhecer nosso diferencial</h1>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus est voluptates illo iusto dolor iste corrupti ullam tatione magni, et spiente obcaecati vel, voluptatum fugit crporis esse consequeentur nulaa!</p>
+								<p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus est voluptates illo iusto dolor iste corrupti ullam tatione magni, et spiente obcaecati vel, voluptatum fugit crporis esse consequeentur nulaa!</p>
 							</section>
 							<a href="#" target="_blank">Saiba mais</a>
 						</div>
@@ -151,5 +153,6 @@
 
 		</body>
 		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/jquery-v3.6.3.min.js"></script>
 		
 	</html> 
