--- a/login2.html
+++ b/login2.html
@@ -14,8 +14,8 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" >
-			<script type="text/javascript" src="js/jquery-v3.6.3.min.js"></script>
-			<script type="text/javascript" src="js/scripts.js"></script>
+			<script type="text/javascript" language="javascript" src="js/jquery-v3.6.0.min.js"></script>
+			<script type="text/javascript" src="js/scripts2.js"></script>
 			
 		</head>
 		<body>
@@ -70,46 +70,27 @@
 			<p>Tenha a melhor experiência com uma loja de gamers!</p>
             <div class="container">
 				<div class="row">
-					<form class="form" id="formLogin">
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
-                        	<div class="col-sm-5">
-                            	<input type="text" class="form-control" id="nome" placeholder="João da Silva" value="">
-                        	</div>
-                    	</div>
-						<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Gênero</label>
-                        	<div class="col-sm-5">
-                            	<select class="form-control" id="genero" value="">
-									<option></option>
-									<option>Prefiro não identificar</option>
-									<option>Feminino</option>
-									<option>Masculino</option>
-								</select>
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Data de Nascimento</label>
-                        	<div class="col-sm-5">
-                            	<input type="date" class="form-control" id="dataDeNascimento" value="">
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">E-mail</label>
-                        	<div class="col-sm-5">
-                            	<input type="email" class="form-control" id="email" placeholder="example@example.com" value="">
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputPassword3" class="col-sm-2 col-form-label">Senha</label>
-                        	<div class="col-sm-5">
-                            	<input type="password" class="form-control" id="senha" value="">
-                        	</div>
-                    	</div>
-                    	<button type="submit" class="btn btn-primary" disabled>Login</button>
-						
-                	</form>
+					<div class="col-md-8">
+                        <form class="form" id="formExample">
+                            <div class="form-group">
+                                <label class="col-md-4 control-label">Idade</label>
+                                <div class="col-md-6">
+                                    <input type="number" class="form-control" id="idade" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-4 control-label">Profissão</label>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" id="profissao">
+                                    <div class="col-md-8">
+                                        <button class="btn btn-primary" disabled>Login</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
 				</div>
-			</div>
+			</div> 
 		</body>
 	</html>
+
