--- a/login.html
+++ b/login.html
@@ -2,27 +2,25 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="UTF-8" />
-			<title>Meu primeiro site</title>
+			<title>Game Mania</title>
 			<meta name="description" content="Programador Front-End, SENAI" />
 			<meta name="kewords" content="HTML, CSS, Javasript, SENAI" />
 			<meta name="author" content="Anna Cecília" />
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
             <link rel="stylesheet" type="text/css" href="css/style.css">
-			<link rel="icon" href="banner.png" type="images/PNG" sizes="16x16">
+			<link rel="icon" href="img/banner-logo.png" type="images/PNG" sizes="16x16">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" >
-			<script type="text/javascript" src="js/jquery-v3.6.3.min.js"></script>
-			<script type="text/javascript" src="js/scripts.js"></script>
 			
 		</head>
 		<body>
 			<header>
 				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 					<div class="container-fluid">
-						<input type="image" src="logo-senai1.png" width=8% alt="submit" />
+						<input type="image" src="img/logo-senai1.png" width=8% alt="submit" />
 					  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					  </button>
@@ -68,7 +66,28 @@
 			</header>
 			<h1>Cadastre-se ou faça seu Login</h1>
 			<p>Tenha a melhor experiência com uma loja de gamers!</p>
-            <div class="container">
+			<main>
+				<section id="section-login">
+					<h1>Login</h1>
+					<div class="d-flex justify-content-center"> <!--mudar do centro-->
+						<form method="post" action="" id="login">
+							<p>
+								<label for="usuario">Nome: </label>
+								<input id="usuario" name="usuario" required="required" type="text"
+									placeholder="Insira o seu usuário" class="form-control" />
+							</p>
+							<p>
+								<label for="senha">Senha: </label>
+								<input id="senha" name="senha" required="required" type="password"
+									placeholder="Insira sua senha" class="form-control"	/>
+							</p>
+							<p>
+								<input type="button" value="Login" class="btn btn-primary" id="bt-login" onclick="login()" />
+							</p>
+						</form>
+					</div>
+				</section>
+            	<div class="container">
 				<div class="row">
 					<form class="form" id="formLogin">
                     	<div class="row mb-3">
@@ -103,13 +122,16 @@
                     	<div class="row mb-3">
                         	<label for="inputPassword3" class="col-sm-2 col-form-label">Senha</label>
                         	<div class="col-sm-5">
-                            	<input type="password" class="form-control" id="senha" value="">
+                            	<input type="password" class="form-control" id="senha" placeholder="mínimo de 6 caracteres" value="">
                         	</div>
                     	</div>
                     	<button type="submit" class="btn btn-primary" disabled>Login</button>
 						
                 	</form>
 				</div>
-			</div>
+				</div>
+			</main>
+			<script type="text/javascript" src="js/scripts.js"></script>
+			<script type="text/javascript" src="js/jquery-3.6.3.min.js"></script>
 		</body>
 	</html>
