--- a/login.html
+++ b/login.html
@@ -1,137 +1,174 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
-		<head>
-			<meta charset="UTF-8" />
-			<title>Game Mania</title>
-			<meta name="description" content="Programador Front-End, SENAI" />
-			<meta name="kewords" content="HTML, CSS, Javasript, SENAI" />
-			<meta name="author" content="Anna Cecília" />
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<html lang="pt-br">
 
-            <link rel="stylesheet" type="text/css" href="css/style.css">
-			<link rel="icon" href="img/banner-logo.png" type="images/PNG" sizes="16x16">
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" >
-			
-		</head>
-		<body>
-			<header>
-				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-					<div class="container-fluid">
-						<input type="image" src="img/logo-senai1.png" width=8% alt="submit" />
-					  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					  </button>
-					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						  <li class="nav-item">
+<head>
+	<meta charset="UTF-8" />
+	<title>Game Mania</title>
+	<meta name="description" content="Programador Front-End, SENAI" />
+	<meta name="kewords" content="HTML, CSS, Javasript, SENAI" />
+	<meta name="author" content="Anna Cecília" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" href="img/banner-logo.png" type="images/PNG" sizes="16x16">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<input type="image" src="img/logo-senai1.png" width=8% alt="submit" />
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
-						  </li>
-						  <li class="nav-item">
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#">Jogos</a>
-						  </li>
-						  <li class="nav-item">
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="celulares/cel_acessorios.html">Celulares</a>
-						  </li>
-						  <li class="nav-item">
+						</li>
+						<li class="nav-item">
 							<a class="nav-link pcgamer" href="#">Pc Gamer</a>
-						  </li>
-						  <li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="hardware.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							  Hardware
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="hardware.html" role="button"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Hardware
 							</a>
 							<ul class="dropdown-menu">
-							  <li><a class="dropdown-item" href="#">Action</a></li>
-							  <li><a class="dropdown-item" href="#">Another action</a></li>
-							  <li><hr class="dropdown-divider"></li>
-							  <li><a class="dropdown-item" href="#">Something else here</a></li>
+								<li><a class="dropdown-item" href="#">Action</a></li>
+								<li><a class="dropdown-item" href="#">Another action</a></li>
+								<li>
+									<hr class="dropdown-divider">
+								</li>
+								<li><a class="dropdown-item" href="#">Something else here</a></li>
 							</ul>
-						  </li>
-						  <li class="nav-item">
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#">Contato</a>
-						  </li>
-						  <li class="nav-item">
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#">Login</a>
-						  </li>
-						</ul>
-						<form class="d-flex" role="search">
-						  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						  <button class="btn btn-outline-success" type="submit">Search</button>
-						</form>
-					  </div>
+						</li>
+					</ul>
+					<form class="d-flex" role="search">
+						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success" type="submit">Search</button>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<h1>Cadastre-se ou faça seu Login</h1>
+	<p>Tenha a melhor experiência com uma loja de gamers!</p>
+	<main>
+		<section id="section-login">
+			<h1>Login</h1>
+			<div class="row">
+				<!--mudar do centro-->
+				<form method="post" action="" class="form" id="formLogin">
+					<div class="row mb-3">
+						<label for="usuario" class="col-sm-2 col-form-label">Usuário</label>
+						<div class="col-sm-5">
+							<input id="usuario" name="usuario" required="required" type="text" placeholder="Insira o seu usuário" value="" class="form-control" />
+						</div>
 					</div>
-				</nav>
-			</header>
-			<h1>Cadastre-se ou faça seu Login</h1>
-			<p>Tenha a melhor experiência com uma loja de gamers!</p>
-			<main>
-				<section id="section-login">
-					<h1>Login</h1>
-					<div class="d-flex justify-content-center"> <!--mudar do centro-->
-						<form method="post" action="" id="login">
-							<p>
-								<label for="usuario">Nome: </label>
-								<input id="usuario" name="usuario" required="required" type="text"
-									placeholder="Insira o seu usuário" class="form-control" />
-							</p>
-							<p>
-								<label for="senha">Senha: </label>
-								<input id="senha" name="senha" required="required" type="password"
-									placeholder="Insira sua senha" class="form-control"	/>
-							</p>
-							<p>
-								<input type="button" value="Login" class="btn btn-primary" id="bt-login" onclick="login()" />
-							</p>
-						</form>
+					<div class="row mb-3">
+						<label for="senha" class="col-sm-2 col-form-label">Senha </label>
+						<div class="col-sm-5">
+							<input id="senha" name="senha" required="required" type="password"
+								placeholder="Insira sua senha" class="form-control" />
+						</div>
 					</div>
-				</section>
-            	<div class="container">
+					<p>
+						<input type="button" value="Login" class="btn btn-primary" id="bt-login" onclick="login()" />
+					</p>
+				</form>
+
+			</div>
+		</section>
+		<section id="section-cadastro">
+			<div id="botao-cadastrar">
+				<button type="button" class="btn btn-info">Não é cadastrado ainda? Cadastre-se</button>
+			</div>
+			<div id="form-cadastrar">
+				<h1>Criar minha conta</h1>
+				<p>Informe os seus dados abaixo para criar sua conta no Game Mania</p>
 				<div class="row">
-					<form class="form" id="formLogin">
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
-                        	<div class="col-sm-5">
-                            	<input type="text" class="form-control" id="nome" placeholder="João da Silva" value="">
-                        	</div>
-                    	</div>
+					<form method="post" action="" class="form" id="formCadastro">
 						<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Gênero</label>
-                        	<div class="col-sm-5">
-                            	<select class="form-control" id="genero" value="">
+							<label for="nome" class="col-sm-2 col-form-label">Nome</label>
+							<div class="col-sm-5">
+								<input id="nome" name="nome" required="required" type="text" placeholder="João da Silva"
+									value="" class="form-control">
+							</div>
+						</div>
+						<div class="row mb-3">
+							<label for="genero" class="col-sm-2 col-form-label">Gênero</label>
+							<div class="col-sm-5">
+								<select id="genero" name="genero" required="required" class="form-control" value="">
 									<option></option>
 									<option>Prefiro não identificar</option>
 									<option>Feminino</option>
 									<option>Masculino</option>
 								</select>
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">Data de Nascimento</label>
-                        	<div class="col-sm-5">
-                            	<input type="date" class="form-control" id="dataDeNascimento" value="">
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputEmail3" class="col-sm-2 col-form-label">E-mail</label>
-                        	<div class="col-sm-5">
-                            	<input type="email" class="form-control" id="email" placeholder="example@example.com" value="">
-                        	</div>
-                    	</div>
-                    	<div class="row mb-3">
-                        	<label for="inputPassword3" class="col-sm-2 col-form-label">Senha</label>
-                        	<div class="col-sm-5">
-                            	<input type="password" class="form-control" id="senha" placeholder="mínimo de 6 caracteres" value="">
-                        	</div>
-                    	</div>
-                    	<button type="submit" class="btn btn-primary" disabled>Login</button>
-						
-                	</form>
+							</div>
+						</div>
+						<div class="row mb-3">
+							<label for="dataDeNascimento" class="col-sm-2 col-form-label">Data de Nascimento</label>
+							<div class="col-sm-5">
+								<input id="dataDeNascimento" name="dataDeNascimento" required="required" type="date"
+									value="" class="form-control">
+							</div>
+						</div>
+						<div class="row mb-3">
+							<label for="email" class="col-sm-2 col-form-label">E-mail</label>
+							<div class="col-sm-5">
+								<input id="email" name="email" required="required" type="email"
+									placeholder="example@example.com" value="" class="form-control">
+							</div>
+						</div>
+						<div class="row mb-3">
+							<label for="senha" class="col-sm-2 col-form-label">Senha</label>
+							<div class="col-sm-5">
+								<input id="senha" name="senha" required="required" type="password"
+									placeholder="mínimo de 6 caracteres" value="" class="form-control">
+							</div>
+						</div>
+						<p>
+							<input type="button" value="Cadastrar" class="btn btn-primary" id="bt-cadastrar"
+								onclick="cadastro()" />
+						</p>
+					</form>
 				</div>
-				</div>
-			</main>
-			<script type="text/javascript" src="js/scripts.js"></script>
-			<script type="text/javascript" src="js/jquery-3.6.3.min.js"></script>
-		</body>
-	</html>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<div class="container-fluid">
+			<button onclick="topo()" id="botaoTopo" class="btn btn-primary">Ir para o topo</button>
+		</div>
+	</footer>
+	<script type="text/javascript" src="js/scripts.js"></script>
+
+	<script type="text/javascript" src="js/jquery-3.6.3.min.js"></script> <!--ver o funcionamento do jquery-->
+
+	<script src="https://code.jquery.com/jquery-3.6.1.js"
+		integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+
+	<script type="text/javascript" src="js/jquery-script.js"></script>
+</body>
+
+</html>
